--- a/first-service/.env
+++ b/first-service/.env
@@ -1,1 +1,1 @@
-ATLAS_URI=mongodb+srv://myfirstreactapp:myfirstreactapp@clusterforthefirstreact.7oreb29.mongodb.net/?retryWrites=true&w=majority
+ATLAS_URI=mongodb+srv://myfirstreactapp:myfirstreactapp@clusterforthefirstreact.7oreb29.mongodb.net/libraryservices?retryWrites=true&w=majority
